--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,6 +65,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/payments">
+                            <i class="bi bi-cash-coin"></i> Поступления
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/logout">
                             <i class="bi bi-box-arrow-right"></i> Выход
                         </a>
