add: система управления услугами (CRUD)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,6 +70,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/services-management">
+                            <i class="bi bi-gear-fill"></i> Услуги
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/logout">
                             <i class="bi bi-box-arrow-right"></i> Выход
                         </a>
