--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,16 +64,23 @@
                             <i class="bi bi-list-ul"></i> Бронирования
                         </a>
                     </li>
+                    {% if request.cookies.get('user_type') == 'admin' %}
                     <li class="nav-item">
                         <a class="nav-link" href="/payments">
                             <i class="bi bi-cash-coin"></i> Поступления
                         </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/plans-management">
+                            <i class="bi bi-bar-chart-line"></i> Планы
+                        </a>
+                    </li>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/services-management">
                             <i class="bi bi-gear-fill"></i> Услуги
                         </a>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">
                             <i class="bi bi-box-arrow-right"></i> Выход
@@ -99,4 +106,3 @@
     {% block extra_js %}{% endblock %}
 </body>
 </html>
-
