--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,16 +64,21 @@
                             <i class="bi bi-list-ul"></i> Бронирования
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/expenses">
+                            <i class="bi bi-currency-exchange"></i> Расходы
+                        </a>
+                    </li>
                     {% if request.cookies.get('user_type') == 'admin' %}
                     <li class="nav-item">
                         <a class="nav-link" href="/payments">
                             <i class="bi bi-cash-coin"></i> Поступления
                         </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/plans-management">
                             <i class="bi bi-bar-chart-line"></i> Планы
                         </a>
-                    </li>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/services-management">
