--- a/app/templates/payments.html
+++ b/app/templates/payments.html
@@ -185,7 +185,7 @@
                         {% endfor %}
                         <tr>
                             <td colspan="6" class="text-end"><strong>Итого</strong></td>
-                            <td style="text-align: right;"><strong>{{ '{:,.0f}'.format(total_fact).replace(',', ' ') }}</strong></td>
+                            <td style="text-align: right;"><strong>{{ '{:,.0f}'.format(total_fact_amount).replace(',', ' ') }}</strong></td>
                             <td style="text-align: right;"><strong>{{ '{:,.0f}'.format(total_fact_prepayment).replace(',', ' ') }}</strong></td>
                             <td style="text-align: right;"><strong>{{ '{:,.0f}'.format(total_fact_payment).replace(',', ' ') }}</strong></td>
                         </tr>
