--- a/app/templates/expenses.html
+++ b/app/templates/expenses.html
@@ -105,14 +105,14 @@
         </form>
     </div>
 
-    <!-- Кнопки добавления -->
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <h4><i class="bi bi-currency-exchange"></i> Расходы</h4>
-        <div>
-            <button type="button" class="btn btn-success btn-add-expense" data-bs-toggle="modal" data-bs-target="#addExpenseModal">
-                <i class="bi bi-plus-circle"></i> Добавить расход
-            </button>
-        </div>
+    <!-- Заголовок -->
+    <h4 class="mb-3"><i class="bi bi-currency-exchange"></i> Расходы</h4>
+
+    <!-- Кнопка добавления над таблицей -->
+    <div class="mb-3">
+        <button type="button" class="btn btn-success btn-add-expense" data-bs-toggle="modal" data-bs-target="#addExpenseModal">
+            <i class="bi bi-plus-circle"></i> Добавить расход
+        </button>
     </div>
 
     <!-- Таблица расходов -->
